 - GBA Thread: Fix possible hang when loading an archive
 - Perf: Fix crash when the GBA thread fails to start
 - SDL: Properly clean up if a game doesn't launch
 - Debugger: Disassembly now lists PSR bitmasks (fixes #191)
 - GBA BIOS: Prevent CpuSet and CpuFastSet from using BIOS addresses as a source (fixes #184)
 - GBA RR: Fix fallthrough error when reading tags from a movie
Misc:
 - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
 - GBA Memory: Simplify memory API and use fixed bus width
 - GBA Video: Start video at the last scanline instead of the first
 - Debugger: Watchpoints now work on STM/LDM instructions
 - GBA: Improve accuracy of event timing
 - Debugger: Clean up GDB stub network interfacing
 - Debugger: Simplify debugger state machine to play nicer with the GBA thread loop
 - Debugger: Merge Thumb BL instructions when disassembling
 - Debugger: Clean up debugger interface, removing obsolete state (fixes #67)
 - Debugger: Watchpoints now report address watched (fixes #68)
 - GBA: Add API for getting Configuration structs for overrides and input
 - GBA: Refactor gba-sensors and gba-gpio into gba-hardware
 - GBA: Refactor gba directory, dropping gba- prefix and making supervisor directory
 - Debugger: Add support for soft breakpoints
 - Util: Use proper locale for reading and writing float values
 - Debugger: Make I/O register names be addresses instead of values
 - Debugger: Rename read/write commands
 - Qt: Optimize logo drawing

0.1.1: (2015-01-24)
Bugfixes:
 - ARM7: Fix LDM writeback to a register already written
 - GBA: Fix timers 2 and 3 updating incorrectly
 - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
 - GBA Audio: Properly initialize audio FIFO channels
 - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
 - GBA BIOS: Fix BIOS prefetch after returning from a SWI